--- a/guitarla_strapi/api/guitarra/models/guitarra.settings.json
+++ b/guitarla_strapi/api/guitarra/models/guitarra.settings.json
@@ -21,7 +21,7 @@
       "required": true
     },
     "imagen": {
-      "collection": "file",
+      "model": "file",
       "via": "related",
       "allowedTypes": [
         "images"
